--- a/ET1_5/Settings.tex
+++ b/ET1_5/Settings.tex
@@ -14,7 +14,7 @@
 
 
 \usepackage{xcolor}
-\definecolor{c1}{HTML}{086173} % 目录颜色 原版为2752C9 紫灰色535AAA 蓝紫色0B0DB7 深蓝色070F94 湖绿色219394 松石灰绿086173
+\definecolor{c1}{HTML}{2752C9} % 目录颜色 原版为2752C9 紫灰色535AAA 蓝紫色0B0DB7 深蓝色070F94 湖绿色219394 松石灰绿086173
 \definecolor{c2}{HTML}{E20129} % 引用颜色 原版\definecolor{c2}{RGB}{190,20,83} 橙色F24729
 
 \usepackage{ctex}
@@ -79,7 +79,7 @@
 \fancypagestyle{plain}{\pagestyle{fancy}}
 \pagestyle{fancy}
 \lhead{\kaishu 中山大学物理与天文学院电子技术实验\uppercase\expandafter{\romannumeral1}} % 左边页眉，学院 + 课程
-\rhead{\kaishu 实验报告By黄罗琳} % 右边页眉，实验报告标题
+\rhead{\kaishu 实验报告By黄罗琳王显} % 右边页眉，实验报告标题
 \cfoot{\thepage} % 页脚，中间添加页码
 
 
