--- a/ET1_9 10/ET9 10.tex
+++ b/ET1_9 10/ET9 10.tex
@@ -226,7 +226,7 @@ $$\frac{\Delta A_{uf}}{A_{uf}}=\frac{\Delta A_{u}}{A_{u}}\frac{1}{1+A_{u}F}$$
 			\hline
 			室温： &23℃  & 实验地点： & A522 \\
 			\hline
-			学生签名：&  & 评分： &\\
+			学生签名：& \includegraphics[width=1cm]{签字.jpg} \includegraphics[width=1cm]{wx.jpg} & 评分： &\\
 			\hline
 			实验时间：& 2024/5/8 & 教师签名：&\\
 			\hline
